RESOLVED FIXED233237
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/white-space-intrinsic-size-013.html
https://bugs.webkit.org/show_bug.cgi?id=233237
Summary [LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/white...
alan
Reported 2021-11-16 20:50:47 PST
ssia
Attachments
Patch (4.03 KB, patch)
2021-11-16 20:53 PST, alan
ews-feeder: commit-queue-
Patch (4.03 KB, patch)
2021-11-17 07:44 PST, alan
no flags
alan
Comment 1 2021-11-16 20:53:10 PST
alan
Comment 2 2021-11-17 07:44:40 PST
EWS
Comment 3 2021-11-17 08:30:27 PST
Committed r285931 (244340@main): <https://commits.webkit.org/244340@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444521 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-17 08:31:26 PST
Note You need to log in before you can comment on or make changes to this bug.