[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/white-space-intrinsic-size-013.html https://bugs.webkit.org/show_bug.cgi?id=233237

Reviewed by Antti Koivisto.

Do not take hanging glyphs into account when measuring content for preferred width.
(Note that this patch is in preparation for enabling IFC preferred width computation)

* layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::removeHangingGlyphs):
* layout/formattingContexts/inline/InlineLine.h:
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::close):



Canonical link: https://commits.webkit.org/244340@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285931 268f45cc-cd09-0410-ab3c-d52691b4dbfc